⏪ [WIP] Backport 1.21.1 → 1.20.1